made formatting changes

--- a/index.html
+++ b/index.html
@@ -24,38 +24,34 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Project - Home</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="navbar-container">
-        Home
-        <a href="./pages/cohort.html">Cohort</a>
-        <a href="./pages/instructors.html">Instructors</a>
-        <a href="./pages/gallery.html">Gallery</a>
+      Home
+      <a href="./pages/cohort.html">Cohort</a>
+      <a href="./pages/instructors.html">Instructors</a>
+      <a href="./pages/gallery.html">Gallery</a>
     </div>
 
     <div class="header-container">
-        <h1>My Project Homepage</h1>
+      <h1>My Project Homepage</h1>
     </div>
 
     <div class="ordered-list-container">
-        <ol type="A">
-            <li>
-                Use the navbar at the top to move around this website.
-            </li>
-            <li>
-                Use the links at the bottom to navigate to other websites.
-            </li>
-        </ol>
+      <ol type="A">
+        <li>Use the navbar at the top to move around this website.</li>
+        <li>Use the links at the bottom to navigate to other websites.</li>
+      </ol>
     </div>
 
     <div class="footer-container">
-        <a href="https://www.wikipedia.org" target="_blank">Wikipedia</a>
-        <a href="https://www.google.com" target="_blank">Google</a>
+      <a href="https://www.wikipedia.org" target="_blank">Wikipedia</a>
+      <a href="https://www.google.com" target="_blank">Google</a>
     </div>
-</body>
+  </body>
 </html>
